Use Sheet+Sidebar on mobile screens instead of menubar buttons, minor fixes

--- a/style.css
+++ b/style.css
@@ -102,4 +102,8 @@
 	.channel-list {
 		grid-template-columns:repeat(1, 1fr);
 	}
+
+	.lexdialog {
+		width: 100% !important;
+	}
 }
